# analytical-crewai-agents

analyst_crew/: pyproject.toml  report.md
analyst_crew/src/analyst_crew/: crew.py  main.py
analyst_crew/src/analyst_crew/config/: agents.yaml  tasks.yaml
code_analyst/: README.md  pyproject.toml
code_analyst/src/code_analyst/: crew.py  main.py
code_analyst/src/code_analyst/assets/inputs_files/: Bank Customer Churn Prediction.csv
code_analyst/src/code_analyst/assets/outputs_files/: report.md  script.py
code_analyst/src/code_analyst/config/: agents.yaml  tasks.yaml
web_searcher/: README.md  pyproject.toml  report.md  summary.txt
web_searcher/src/analyst_crew/: crew.py  main.py
web_searcher/src/web_searcher/: crew.py  main.py
web_searcher/src/web_searcher/config/: tasks.yaml
