[project]
name = "code_analyst"
version = "0.1.0"
description = "code_analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
code_analyst = "code_analyst.main:run"
run_crew = "code_analyst.main:run"
train = "code_analyst.main:train"
replay = "code_analyst.main:replay"
test = "code_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
