[project]
name = "Web searcher"
version = "0.1.0"
description = "analyst_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
analyst_crew = "analyst_crew.main:run"
run_crew = "analyst_crew.main:run"
train = "analyst_crew.main:train"
replay = "analyst_crew.main:replay"
test = "analyst_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
