[project]
name = "web_searcher"
version = "0.1.0"
description = "web_searcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
web_searcher = "web_searcher.main:run"
run_crew = "web_searcher.main:run"
train = "web_searcher.main:train"
replay = "web_searcher.main:replay"
test = "web_searcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
